feat: Typography font-weight props 값 변경

--- a/stories/components/dataDisplay/card/CoreCard.stories.mdx
+++ b/stories/components/dataDisplay/card/CoreCard.stories.mdx
@@ -85,8 +85,8 @@ export const Default = (args, { argTypes }) => ({
 										<Avatar type="nickname" :text="item.belong.substr(0, 1)" size="small"/>
 									</template>
 									<template v-slot:name>
-                                        <Typography type="body2" color="gray850" font-weight="bold" element="span">닉네임</Typography>
-                                        <Typography type="caption1" font-weight="normal" element="span" color="gray500">{{ item.belong }}</Typography>
+                                        <Typography type="body2" color="gray850" font-weight="semi-bold" element="span">닉네임</Typography>
+                                        <Typography type="caption1" font-weight="regular" element="span" color="gray500">{{ item.belong }}</Typography>
 									</template>
 									<template v-slot:icon>
 										<Icon name="IconCheckRoundSmallFill" color="gray400"/>
