--- a/stories/components/message/Banner.stories.mdx
+++ b/stories/components/message/Banner.stories.mdx
@@ -12,14 +12,30 @@ import NewCol from '@/components/layout/NewCol';
 	argTypes={{
 		type: {
 			description: 'banner 종류',
-			defaultValue: 'standard',
+			defaultValue: 'full',
 			control: {
 				type: 'select',
 				options: ['standard', 'full'],
 			},
 		},
-		height: {
-			defaultValue: '280px',
+		title: {
+			defaultValue: 'Title',
+			control: {
+				type: 'text',
+			},
+		},
+		description: {
+			defaultValue: 'Description',
+			control: {
+				type: 'text',
+			},
+		},
+		alignItems: {
+			defaultValue: 'center',
+			control: {
+				type: 'select',
+				options: ['center', 'flex-start', 'flex-end'],
+			},
 		},
 	}}
 />
@@ -28,24 +44,12 @@ export const Default = (args, { argTypes }) => ({
 	props: Object.keys(argTypes),
 	components: { Button, Banner, Typography, NewGrid, NewRow, NewCol },
 	template: `<div>
-            <Banner :type="type" :blur="blur" :height="height">
+            <Banner :type="type" :blur="blur" :title="title" :description="description" :align-items="alignItems">
                 <template v-slot:background>
-                    <div style="background-color: #f3f4f5;"></div>
+                    <div style="background-color: #f3f4f5; height: 100%;"></div>
                 </template>
-                <template v-slot>
-                    <NewGrid>
-                        <NewRow>
-                            <NewCol :col-sm="4" :col-lg="12">
-                                <Typography class="mt-80" type="headline1" color="gray800" align="left">
-                                    Title
-                                </Typography>
-                                <Typography type="headline6" color="gray800" align="left">
-                                    description
-                                </Typography>
-                                <Button class="mt-32 mb-40" full>CTA BTN</Button>
-                            </NewCol>
-                        </NewRow>
-                    </NewGrid>
+                <template v-slot:button>
+                    <Button size="xlarge"> CTA BTN </Button>
                 </template>
             </Banner>
         </div>`,
@@ -66,32 +70,27 @@ export const Default = (args, { argTypes }) => ({
 ### All
 
 <Canvas>
-	<Story name="All" height="100px">
+	<Story name="All" height="500px">
 		{{
 			components: { Banner, NewGrid, NewCol, NewRow, Typography, Button },
-			template: `
-                <div>
-                    <Banner type="standard" blur height="280px">
+			template: `<div>
+                <Banner type="standard" title="Title" description="Description" blur>
                 <template v-slot:background>
-                    <img src="https://cdn.comento.kr/edu/title_VaZDZCpmRI.jpg?s=960x502" />
+                    <div style="background-color: #f3f4f5; height: 100%;"></div>
                 </template>
-                <template v-slot>
-                    <NewGrid>
-                        <NewRow>
-                            <NewCol :col-sm="4" :col-lg="12">
-                                <Typography class="mt-80" type="headline1" color="gray000" align="left">
-                                    Title
-                                </Typography>
-                                <Typography type="headline6" color="gray000" align="left">
-                                    description
-                                </Typography>
-                                <Button class="mt-32 mb-40" size="xlarge">이동하기</Button>
-                            </NewCol>
-                        </NewRow>
-                    </NewGrid>
+                <template v-slot:button>
+                    <Button size="xlarge"> CTA BTN </Button>
                 </template>
             </Banner>
-            `,
+            <Banner class="mt-40" type="full" title="Title" description="Description" blur>
+                <template v-slot:background>
+                    <div style="background-color: #f3f4f5; height: 100%;"></div>
+                </template>
+                <template v-slot:button>
+                    <Button size="xlarge"> CTA BTN </Button>
+                </template>
+            </Banner>
+            </div>`,
 		}}
 	</Story>
 </Canvas>
