--- a/stories/elements/core/icon/Icon.stories.mdx
+++ b/stories/elements/core/icon/Icon.stories.mdx
@@ -241,6 +241,7 @@ export const Default = (args, { argTypes }) => ({
                         <div style="display: flex; flex-wrap: wrap;">
                           <IconWrapper component="Icon" name="IconProfileXLargeLine" />
                           <IconWrapper component="Icon" name="IconProfileXLargeFill" />
+                          <IconWrapper component="Icon" name="IconAnswerXLargeLine" />
                           <IconWrapper component="Icon" name="IconVodXLargeLine" />
                           <IconWrapper component="Icon" name="IconEssayXLargeLine" />
                           <IconWrapper component="Icon" name="IconAnalyticsXLargeLine" />
