feat: RadioButton new 컬러 반영

--- a/stories/components/dataEntry/RadioButton.stories.mdx
+++ b/stories/components/dataEntry/RadioButton.stories.mdx
@@ -115,10 +115,10 @@ export const Default = (args, { argTypes }) => ({
                     </div>
                     <div class="mt-20">
                         <h3 class="mb-12"> color</h3>
-                        <RadioButton size="medium" class="mb-4" name="size" font-color="green600">primary</RadioButton>
-                        <RadioButton size="medium" class="mb-4" name="size" radio-color="success" font-color="blue600">success</RadioButton>
-                        <RadioButton size="medium" class="mb-4" name="size" radio-color="info" font-color="gray600">secondary</RadioButton>
-                        <RadioButton size="medium" class="mb-4" name="size" radio-color="error" font-color="red600">error</RadioButton>
+                        <RadioButton size="medium" class="mb-4" name="size" font-color="primary">primary</RadioButton>
+                        <RadioButton size="medium" class="mb-4" name="size" radio-color="success" font-color="success">success</RadioButton>
+                        <RadioButton size="medium" class="mb-4" name="size" radio-color="info" font-color="info">info</RadioButton>
+                        <RadioButton size="medium" class="mb-4" name="size" radio-color="error" font-color="error">error</RadioButton>
                     </div>
                 </div>
             `,
