fix: 스토리에서 컬러 잘못들어간 오류 수정

--- a/stories/components/dataDisplay/Tabs.stories.mdx
+++ b/stories/components/dataDisplay/Tabs.stories.mdx
@@ -185,7 +185,7 @@ export const Default = (args, { argTypes }) => ({
                                 {{ item }}
                             </Button>
                             <template v-if="item === '새 댓글'">
-                                <Badge text="3" color="error" type="inline"/>
+                                <Badge text="3" color="secondary" type="inline"/>
                             </template>
                     </template>
                 </Tabs>
@@ -224,7 +224,7 @@ export const Default = (args, { argTypes }) => ({
                             {{ item }}
                         </Button>
                         <template v-if="item === '새 댓글'">
-                            <Badge text="3" color="error" type="inline"/>
+                            <Badge text="3" color="secondary" type="inline"/>
                         </template>
                     </template>
                 </Tabs>
@@ -234,7 +234,7 @@ export const Default = (args, { argTypes }) => ({
                             {{ item }}
                         </Button>
                     <template v-if="item === '새 댓글'">
-                    <Badge text="3" color="error" type="inline"/>
+                    <Badge text="3" color="secondary" type="inline"/>
                     </template>
                     </template>
                 </Tabs>
