feat: eduCard, PromotionEduCard slot name 컨벤션에 맞게 변경

--- a/stories/components/dataDisplay/card/PromotionEduCard.stories.mdx
+++ b/stories/components/dataDisplay/card/PromotionEduCard.stories.mdx
@@ -174,7 +174,7 @@ export const Default = (args, { argTypes }) => ({
                                 :applicant-count="72"
                             >
                                 <template v-slot:title>Title</template>
-                                <template v-slot:alternativeCaption>대체 캡션 사용</template>
+                                <template v-slot:alternative-caption>대체 캡션 사용</template>
                             </PromotionEduCard>
                         </StyleCol>
                         <StyleCol :col-lg="4">
