--- a/stories/elements/core/icon/Icon.stories.mdx
+++ b/stories/elements/core/icon/Icon.stories.mdx
@@ -85,9 +85,11 @@ export const Default = (args, { argTypes }) => ({
                             <IconWrapper component="Icon" name="IconQuestionMarkSmallFill"/>
                             <IconWrapper component="Icon" name="IconExclamationSmallLine"/>
                             <IconWrapper component="Icon" name="IconExclamationSmallFill"/>
-                            <IconWrapper component="Icon" name="IconSettingSmallFill"/>
+                            <IconWrapper component="Icon" name="IconInformationSmallLine"/>
+                            <IconWrapper component="Icon" name="IconInformationSmallFill"/>
                         </div>
                         <div style="display: flex; flex-wrap: wrap;">
+                            <IconWrapper component="Icon" name="IconSettingSmallFill"/>
                             <IconWrapper component="Icon" name="IconMegaphoneSmallLine"/>
                             <IconWrapper component="Icon" name="IconStarSmallLine"/>
                             <IconWrapper component="Icon" name="IconStarSmallFill"/>
