feat: 기본 Typography 제거
이게 있으면 의도대로 동작 안함(small size일때)

--- a/stories/components/dataDisplay/rating/TextRating.stories.mdx
+++ b/stories/components/dataDisplay/rating/TextRating.stories.mdx
@@ -52,12 +52,14 @@ export const Default = (args, { argTypes }) => ({
                         댓글
                     </template>
                     <template v-slot:text-right>
-                        3
+                        <Typography color="gray850">
+                            3
+                        </Typography>
                     </template>
                     </TextRating>
                     <TextRating size="small">
                         <template v-slot:text-left>
-                        총
+                            총
                         </template>
                     <template v-slot:text-right>
                         <Typography color="gray700" element="span">204</Typography>건
