--- a/stories/components/dataDisplay/rating/TextRating.stories.mdx
+++ b/stories/components/dataDisplay/rating/TextRating.stories.mdx
@@ -52,7 +52,7 @@ export const Default = (args, { argTypes }) => ({
                         댓글
                     </template>
                     <template v-slot:text-right>
-                        <Typography color="gray850">
+                        <Typography color="gray850" :font-weight="500">
                             3
                         </Typography>
                     </template>
@@ -62,7 +62,7 @@ export const Default = (args, { argTypes }) => ({
                             총
                         </template>
                     <template v-slot:text-right>
-                        <Typography color="gray700" element="span">204</Typography>건
+                        <Typography color="gray700" element="span" :font-weight="500">204</Typography>건
                     </template>
                 </TextRating>
             </div>
