feat: 스토리에서 chip 변경

--- a/stories/components/dataDisplay/card/CoreCard.stories.mdx
+++ b/stories/components/dataDisplay/card/CoreCard.stories.mdx
@@ -220,7 +220,7 @@ export const Default = (args, { argTypes }) => ({
                             >
                                 <template v-slot:chips>
                                     <ChipGroup class="mb-8" style="margin-top: -2px">
-                                        <Chip size="small" style="background: #D6EBFF; color: #0074CC">조회수 TOP</Chip>
+                                        <Chip size="small" color="primary">조회수 TOP</Chip>
                                         <Chip size="small">이직 고민</Chip>
                                     </ChipGroup>
                                 </template>
