fix: loader 색상 및 loading 버튼 test용 문구 추가 및 color 반영

--- a/stories/components/general/button/Button.stories.mdx
+++ b/stories/components/general/button/Button.stories.mdx
@@ -121,7 +121,7 @@ export const Default = (args, { argTypes }) => ({
                             <ButtonStateTitle>loading</ButtonStateTitle>
                             <div :style="getGhostTypeBackgroundColor(type)">
                                 <template v-for="(color, index) in getFilterButtonColors(type)">
-                                    <Button :color="color" :type="type" class="mb-16" loading></Button>
+                                    <Button :color="color" :type="type" class="mb-16" loading style="color: transparent;">Button</Button>
                                 </template>
                             </div>
                         </div>
