feat: 글자색 기본값 넣기 (#775)
* feat: 글자색 기본값 넣기

* refactor: 불필요한 div tag 제거

* feat: 기본 Typography 제거

이게 있으면 의도대로 동작 안함(small size일때)

* feat: TextRating story 예시 수정

--- a/stories/components/dataDisplay/rating/TextRating.stories.mdx
+++ b/stories/components/dataDisplay/rating/TextRating.stories.mdx
@@ -52,15 +52,17 @@ export const Default = (args, { argTypes }) => ({
                         댓글
                     </template>
                     <template v-slot:text-right>
-                        <strong>3</strong>
+                        <Typography color="gray850" :font-weight="500">
+                            3
+                        </Typography>
                     </template>
                     </TextRating>
                     <TextRating size="small">
                         <template v-slot:text-left>
-                        총
+                            총
                         </template>
                     <template v-slot:text-right>
-                        <Typography color="gray700" element="span">204</Typography>건
+                        <Typography color="gray700" element="span" :font-weight="500">204</Typography>건
                     </template>
                 </TextRating>
             </div>
