feat: PromotionEduCard QA (#778)
* feat: PromotionEduCard QA

* feat: PromotionEduCard QA

* feat: border-radius 변경

* feat: dominant-color 추가

Co-authored-by: seongsil <yooo1201@naver.com>

--- a/stories/components/dataDisplay/card/PromotionEduCard.stories.mdx
+++ b/stories/components/dataDisplay/card/PromotionEduCard.stories.mdx
@@ -65,6 +65,10 @@ import Chip from '@/components/components/dataDisplay/chips/Chip';
 				type: 'number',
 			},
 		},
+		dominantColor: {
+			description: '카테고리 색깔',
+			defaultValue: { red: 0, green: 0, blue: 0 },
+		},
 		title: {
 			description: '카드 타이틀',
 			defaultValue: null,
@@ -111,6 +115,7 @@ export const Default = (args, { argTypes }) => ({
                         :score-average="scoreAverage"
                         :review-count="reviewCount"
                         :applicant-count="applicantCount"
+						:dominant-color="dominantColor"
                     >
                        <template v-slot:title>Title</template>
                     </PromotionEduCard>
@@ -122,6 +127,7 @@ export const Default = (args, { argTypes }) => ({
                         :score-average="scoreAverage"
                         :review-count="reviewCount"
                         :applicant-count="applicantCount"
+						:dominant-color="dominantColor"
                     >
                        <template v-slot:title>Title</template>
                     </PromotionEduCard>
@@ -133,6 +139,7 @@ export const Default = (args, { argTypes }) => ({
                         :score-average="scoreAverage"
                         :review-count="reviewCount"
                         :applicant-count="applicantCount"
+						:dominant-color="dominantColor"
                     >
                        <template v-slot:title>Title</template>
                     </PromotionEduCard>
@@ -172,6 +179,7 @@ export const Default = (args, { argTypes }) => ({
                                 :score-average="4.4"
                                 :review-count="50"
                                 :applicant-count="72"
+								:dominant-color="{ red: 43, green: 86, blue: 108 }"
                             >
                                 <template v-slot:title>Title</template>
                                 <template v-slot:alternative-caption>대체 캡션 사용</template>
@@ -184,6 +192,7 @@ export const Default = (args, { argTypes }) => ({
                                 :score-average="4.4"
                                 :review-count="50"
                                 :applicant-count="72"
+								:dominant-color="{ red: 69, green: 112, blue: 84 }"
                             >
                                 <template v-slot:title>Title</template>
                             </PromotionEduCard>
@@ -195,6 +204,7 @@ export const Default = (args, { argTypes }) => ({
                                 :score-average="5"
                                 :review-count="50"
                                 :applicant-count="72"
+								:dominant-color="{ red: 114, green: 96, blue: 55 }"
                             >
                                 <template v-slot:title>Title</template>
                             </PromotionEduCard>
