fix: full일 때 한번에 full처럼 보이게 수정

--- a/stories/components/dataDisplay/list/fileList/FileList.stories.mdx
+++ b/stories/components/dataDisplay/list/fileList/FileList.stories.mdx
@@ -63,6 +63,7 @@ export const Default = (args, { argTypes }) => ({
     },
   },
   template: `<div style="width: 100%; display: flex; align-items: flex-start; flex-direction: column;">
+                <div :style="full ? 'width: 100%' : ''">
                  <FileInput v-if="isRemovable" @uploadFiles="handleUploadFiles"/>
                  <FileSummary v-else :full="full" :length="filesData.length" />
                  <Divider type="dash" style="margin-top: 8.5px; margin-bottom: 8.5px;"/>
@@ -73,6 +74,7 @@ export const Default = (args, { argTypes }) => ({
                     @clickFileItemContent="handleClickFileItemContent"
                     @clickFileTrashIcon="handleClickFileTrashIcon"
                  />
+                </div>
              </div>`,
    components: { FileList, Divider, FileSummary, FileInput },
 });
