--- a/stories/components/general/button/IconButton.stories.mdx
+++ b/stories/components/general/button/IconButton.stories.mdx
@@ -1,7 +1,7 @@
 import { ArgsTable, Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
 import { buttonSizes, buttonColors, buttonTypes } from '@/components/components/general/button/Button';
 import Typography from '@/components/elements/core/typography/Typography';
-import IconButton, { IconButtonSizes } from "@/components/components/general/button/IconButton";
+import IconButton, { IconButtonSizes, IconButtonTypes } from "@/components/components/general/button/IconButton";
 import { IconNames } from "@/components/elements/core/icon/Icon";
 
 <Meta
@@ -39,6 +39,13 @@ import { IconNames } from "@/components/elements/core/icon/Icon";
                 type: "boolean",
             },
         },
+        type: {
+            description: "버튼 타입",
+            control: {
+                type: "select",
+                options: IconButtonTypes,
+            }
+        }
     }}
 />
 
@@ -52,6 +59,7 @@ export const Default = (args, { argTypes }) => ({
             :color="color"
             :disabled="disabled"
             :transparent="transparent"
+            :type="type"
         />`,
 });
 
