--- a/stories/components/dataDisplay/list/fileList/FileList.stories.mdx
+++ b/stories/components/dataDisplay/list/fileList/FileList.stories.mdx
@@ -49,6 +49,7 @@ export const Default = (args, { argTypes }) => ({
         }, 3000);
     },
     handleClickFileItemContent(payload) {
+        if(this.isRemovable) return this.handleClickFileTrashIcon(payload);
         this.filesData[payload.index].isLoading = true;
         setInterval(() => {
           this.filesData[payload.index].isLoading = false;
