feat: iconButton컴포넌트에 rotate prop 추가 (#812)
* feat: iconButton컴포넌트에 rotate prop 추가

* fix: merge conflict 해결하다가 빠진 부분 수정

Co-authored-by: Donghoon Song <32301380+donghoon-song@users.noreply.github.com>
Co-authored-by: donghoon-song <thdehdgns@gmail.com>

--- a/stories/components/general/button/IconButton.stories.mdx
+++ b/stories/components/general/button/IconButton.stories.mdx
@@ -39,6 +39,12 @@ import { IconNames } from "@/components/elements/core/icon/Icon";
                 type: "boolean",
             },
         },
+        rotate: {
+            description: "아이콘의 회전 각도",
+            control: {
+                type: "number",
+            },
+        },
         type: {
             description: "버튼 타입",
             control: {
@@ -59,6 +65,7 @@ export const Default = (args, { argTypes }) => ({
             :color="color"
             :disabled="disabled"
             :transparent="transparent"
+            :rotate="rotate"
             :type="type"
         />`,
 });
