Feature/file list qa (#813)
* fix: FileItem svg가 잘리는 이슈 해결

* fix: full일 때 한번에 full처럼 보이게 수정

* fix: isRemovable일때는 아이템 클릭 시 파일 삭제

* fix: FileItem 전체에도 액션적용

--- a/stories/components/dataDisplay/list/fileList/FileList.stories.mdx
+++ b/stories/components/dataDisplay/list/fileList/FileList.stories.mdx
@@ -48,7 +48,8 @@ export const Default = (args, { argTypes }) => ({
             this.filesData[payload.index].isLoading = false;
         }, 3000);
     },
-    handleClickFileItemContent(payload) {
+      handleClickFileItem(payload) {
+        if(this.isRemovable) return this.handleClickFileTrashIcon(payload);
         this.filesData[payload.index].isLoading = true;
         setInterval(() => {
           this.filesData[payload.index].isLoading = false;
@@ -63,6 +64,7 @@ export const Default = (args, { argTypes }) => ({
     },
   },
   template: `<div style="width: 100%; display: flex; align-items: flex-start; flex-direction: column;">
+                <div :style="full ? 'width: 100%' : ''">
                  <FileInput v-if="isRemovable" @uploadFiles="handleUploadFiles"/>
                  <FileSummary v-else :full="full" :length="filesData.length" />
                  <Divider type="dash" style="margin-top: 8.5px; margin-bottom: 8.5px;"/>
@@ -70,9 +72,11 @@ export const Default = (args, { argTypes }) => ({
                     :is-removable="isRemovable"
                     :full="full"
                     @clickFileDownloadIcon="handleClickFileDownloadIcon"
-                    @clickFileItemContent="handleClickFileItemContent"
+                    @clickFileItem="handleClickFileItem"
+                    @clickFileItemContent="handleClickFileItem"
                     @clickFileTrashIcon="handleClickFileTrashIcon"
                  />
+                </div>
              </div>`,
    components: { FileList, Divider, FileSummary, FileInput },
 });
